# process_dashboard

./: .dockerignore  .gitignore  CODEX_TASKS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GETTING_STARTED.md  MANIFEST.in  PROJECT_TASKS.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  ai_task.md  bug_report.md  documentation.md  feature_request.md  integration.md  task_list.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  codex-task-watcher.yml  docs.yml  lint-and-fix.yml  publish.yml  test.yml
config/: default_config.yaml
config/examples/monitoring/: basic_monitoring.json  server_monitoring.json
docs/: README.md  SRS.md
docs/changes/: CHANGELOG_FORMAT.md
docs/changes/system/: SYSTEM_CHANGES.md
docs/maintenance/: MAINTENANCE_GUIDE.md
docs/maintenance/developer/: MAINTENANCE.md
docs/monitoring/: METRICS.md  MONITORING.md  MONITORING_GUIDE.md  QUICK_REFERENCE.md  TEMPLATES.md  USAGE.md
docs/project_plan/: PROJECT_PLAN.md
docs/support/user/: TROUBLESHOOTING.md
examples/: README.md
scripts/: README.md  assign_to_codex.py  debugger.json  dev_setup.sh  docker-test.sh  github_bulk_issues.sh  github_project_board.sh  gitlab_bulk_issues.sh  gitlab_project_board.sh  lint.sh  test.sh
scripts/maintenance/: check_performance.sh  cleanup.sh  rotate_logs.sh  security_scan.sh  setup_maintenance.sh
scripts/monitoring/: dashboard-monitor.sh  manage-templates.sh  monitor.sh  visualize.sh
src/: README.md  __init__.py  dashboard.py  main.py  version.py
src/ai/: agent_base.py  db_logger.py  optimizer_cpu.py  optimizer_disk.py  optimizer_memory.py  optimizer_network.py  orchestrator.py  queries.py
src/config/: README.md  __init__.py  alert_manager.py  config_manager.py  correlation_engine.py  migrator.py  notification_manager.py  notification_templates.py  settings.py  template_analytics.py  template_categories.py  templates.py  validators.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/monitoring/templates/: alert_templates.py  notification_templates.py
src/monitoring/visualization/: charts.py
src/processes/: README.md  __init__.py  history.py  monitor.py  process_controller.py  snmp_monitor.py
src/tests/: dummy_ui_deps.py  test_alerts.py  test_config.py  test_integration.py  test_metrics.py  test_process_controller.py  test_process_history.py  test_process_monitor.py  test_process_panel.py  test_settings.py  test_utils_helpers.py
src/ui/: README.md  __init__.py  analytics_dashboard.py  config_editor.py  config_panel.py  file_browser.py  file_dialog.py  matrix_background.py  matrix_splash.py  process_panel.py  resource_monitor.py  template_screen.py
src/utils/: README.md  __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_config_panel.py  test_file_browser.py  test_process_monitor.py  test_resource_monitor.py
