[metadata]
name = process-dashboard
version = attr: src.__version__
description = A matrix-themed system process management dashboard
long_description = file: README.md
long_description_content_type = text/markdown
author = System Administrator
author_email = admin@example.com
url = https://github.com/yourusername/process-dashboard
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Monitoring

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    textual>=0.9.0
    psutil>=5.8.0
    rich>=10.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    process-dashboard = main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.18.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.9.0
    pre-commit>=2.17.0
    tox>=3.24.0
    build>=0.7.0
    twine>=3.4.2
    bandit>=1.7.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info,.tox,venv

[mypy]
python_version = 3.7
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --cov=src --cov-report=term-missing
asyncio_mode = strict
